<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/slider"
                android:text="@string/information1"
                android:textColor="@color/date" />

            <TextView
                android:id="@+id/labelDateCrea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/slider"
                android:text="@string/information2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/slider"
                android:text="@string/information3"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/labelDuree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/slider"
                android:text="@string/information4"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/slider"
                android:text="@string/information5"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewClickLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/information6" >
            </TextView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>